# reef-mcp-registry

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SUBMISSION.md  docker-compose.yml
lobstertrap-reef/: .dockerignore  .gitignore  .keep  Dockerfile  Makefile  RACE_TEST.md  README.md  go.mod  go.sum  main.go
lobstertrap-reef/cmd/: audit_root.go  audit_root_test.go  audit_verify.go  audit_verify_test.go  inspect.go  policy_apply.go  policy_apply_test.go  policy_sign.go  root.go  serve.go  serve_refinements_test.go  test.go
lobstertrap-reef/configs/: default_policy.yaml
lobstertrap-reef/internal/audit/: merkle.go  merkle_test.go
lobstertrap-reef/internal/dashboard/: hub.go  types.go
lobstertrap-reef/internal/defaults/: defaults.go
lobstertrap-reef/internal/inspector/: inspector.go  markdown_exfil.go  markdown_exfil_test.go  mcp_bind.go  mcp_bind_test.go
lobstertrap-reef/internal/metadata/: mismatch.go  mismatch_test.go  types.go
lobstertrap-reef/internal/pipeline/: body_truncated_test.go  denied_domains_test.go  ewma_integration_test.go  mcp_bind_integration_test.go  merkle_integration_test.go  notify_race_test.go  pipeline.go  pipeline_test.go  ratelimit_integration_test.go  reef_integration_test.go  result.go  svid_integration_test.go
lobstertrap-reef/internal/policy/: domains.go  domains_test.go  policy_test.go  table.go  types.go
lobstertrap-reef/internal/proxy/: openai.go  proxy.go  proxy_test.go
lobstertrap-reef/internal/quarantine/: store.go  store_test.go
lobstertrap-reef/pkg/identity/: scope.go  scope_test.go  svid_jwt.go  svid_jwt_test.go
lobstertrap-reef/pkg/mcpsupply/: registry.go  (+1 more)
reef/control-plane/atlas/: .gitignore  .keep  Dockerfile  README.md  pyproject.toml
reef/control-plane/atlas/app/: __init__.py  main.py
reef/control-plane/atlas/app/api/: __init__.py  health.py  publish.py  register.py  verify.py
reef/control-plane/atlas/app/audit/: __init__.py  logger.py
reef/control-plane/atlas/app/crypto/: __init__.py  signer.py  verifier.py
reef/control-plane/atlas/app/models/: __init__.py  manifest.py  publisher.py  registry_entry.py
reef/control-plane/atlas/app/policy/: __init__.py  allowlist.py  sdk_versions.py  stdio_policy.py
reef/control-plane/atlas/app/seed/: __init__.py  demo_data.py
reef/control-plane/atlas/app/store/: __init__.py  file_store.py
reef/control-plane/atlas/data/: .gitkeep
reef/control-plane/atlas/tests/: conftest.py  test_crypto.py  test_integration_victim.py  test_register.py  test_seed.py  test_stdio_policy.py  test_store.py  test_verify.py
reef/control-plane/dast_a/: .dockerignore  .gitignore  .keep  Dockerfile  README.md  pyproject.toml
reef/control-plane/dast_a/app/: __init__.py  main.py
reef/control-plane/dast_a/app/agent/: __init__.py  checkpoint.py  gemini_blue.py  gemini_blue_test.py  gemini_red.py  gemini_red_test.py  ppo_trainer.py  run.py  session_store.py  session_store_test.py
reef/control-plane/dast_a/app/api/: __init__.py  gemini.py  health.py  packs.py  review_queue.py  run.py
reef/control-plane/dast_a/app/audit/: __init__.py  logger.py
reef/control-plane/dast_a/app/packs/: __init__.py  catalog.py  schema.py  seed_packs.py
reef/control-plane/dast_a/app/review/: __init__.py  draft.py  webhook.py
reef/control-plane/dast_a/scripts/: train_baseline.py
reef/control-plane/dast_a/tests/: conftest.py  test_api.py  test_env.py  test_gemini_integration.py  test_integration_victim.py  test_mutations.py  test_packs.py  test_ppo_trainer.py  test_reward.py
reef/control-plane/policy_bus/: .dockerignore  .gitignore  .keep  Dockerfile  README.md  pyproject.toml
reef/control-plane/policy_bus/app/: __init__.py  main.py
reef/control-plane/policy_bus/app/audit/: __init__.py  logger.py
reef/control-plane/policy_bus/app/crypto/: __init__.py  verify_bundle.py
reef/control-plane/policy_bus/app/models/: __init__.py  bundle.py  fleet.py
reef/control-plane/policy_bus/app/service/: __init__.py  admin_service.py  bus_service.py
reef/control-plane/policy_bus/app/store/: __init__.py  bundle_store.py  fleet_store.py
reef/control-plane/policy_bus/data/: .gitkeep
reef/control-plane/policy_bus/proto/: policy_bus.proto
reef/control-plane/policy_bus/scripts/: gen_protos.py
reef/control-plane/policy_bus/tests/: conftest.py  test_admin_service.py  test_bundle_store.py  test_bus_service.py  test_crypto.py  test_fleet_store.py  test_integration_3nodes.py
reef/control-plane/quote/: .dockerignore  .keep  Dockerfile  README.md  pyproject.toml
reef/control-plane/quote/app/: __init__.py  ria_generator.py  ria_signer.py  underwriter_agent.py
reef/control-plane/quote/app/api/: __init__.py  app.py  download.py  generate.py  health.py  verify.py
reef/control-plane/quote/app/data_sources/: __init__.py  ai_bom.py  attack_telemetry.py  audit_root.py  coverage_matrix.py
reef/control-plane/quote/app/pdf/: __init__.py  layout.py  sections.py  style.py
reef/control-plane/quote/app/rubrics/: __init__.py  munich_re_anti_patterns.md  munich_re_framework.md
reef/control-plane/quote/samples/: sample-ria.pdf.sig  sample-signer.key  sample-signer.pub  verify_sample.py
reef/control-plane/quote/tests/: conftest.py  test_api.py  test_audit_invariant.py  test_data_sources.py  test_integration_full_ria.py  test_model_attestation.py  test_pdf_sections.py  test_ria_generator.py  test_ria_signer.py  test_sample_ria_signature.py  test_underwriter_agent.py  test_underwriter_integration.py
reef/stage-ui/: .dockerignore  .env.local.example  .env.production  .gitignore  .keep  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
samples/: .keep
scripts/: dev-up.sh  generate_architecture_diagram.py  generate_cover_image.py
victim/: .keep  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml
victim/app/: globals.css  layout.tsx  page.tsx
(+86 files in other folders)
