[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reef-policy-bus"
version = "0.1.0"
description = "Reef Policy Bus — TerraFabric-shaped gRPC bus for signed policy distribution (Layer 4)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Reef contributors" }]
dependencies = [
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "cryptography>=42.0",
    "httpx>=0.27",
    "protobuf>=5.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
policy-bus = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
