[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reef-quote"
version = "0.2.0"
description = "Reef Quote — Munich Re-grounded AI-deployment underwriter agent (Gemini 3 Pro) + RIA PDF generator (Layer 7). Phase B round 1 refinement: artifact-integrity-clean signed sample + GA Gemini model pin + model_attestation block + D-018 audit invariant scan."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Reef contributors" }]
dependencies = [
    "pydantic>=2.7",
    "google-genai>=1.0",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "cryptography>=42.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "pypdf>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.rubrics" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
